Adding bet page

--- a/public/index.html
+++ b/public/index.html
@@ -11,18 +11,10 @@
 <body>
     <div id="container">
         <h1>Let's play!</h1>
-        <h2>BlackJack</h2>
-        <img>
-        <div id="buttons">
-            <button id="hit">Hit</button>
-            <button id="stand">Stand</button>
+        <img id="background" src="./assets/blackjack-background.png">
+        <div>
+            <button id="play" onclick="window.location.href='/game.html'">Play</button>
         </div>
     </div>
 </body>
 </html>
-
-
-<!-- Build HTML container and pages -->
-<!-- Create buttons -->
-<!-- Style with CSS -->
-<!-- Then Javascript... -->
