--- a/public/game.html
+++ b/public/game.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Let's play! Blackjack</title>
     <link rel="stylesheet" href="./style.css">
-    <link rel="javascript" href="./app.js">
 </head>
 <body>
     <div id="game-container">
@@ -24,7 +23,10 @@
             <button type="button" class="bet-button" id="red">$50</button>
         </div>
         <div id="total-bet">Total Bet: $0</div>
+        <button type="button" class="bet-button" id="clear">Clear Bet</button>
         <button type="button" class="bet-button" onclick="window.location.href='/blackjack.html'">Ready to Continue?</button>
     </div>
+
+    <script rel="javascript" src="./app.js"></script>
 </body>
 </html>
