--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blackjack Milestone Project</title>
     <link rel="stylesheet" href="./style.css">
-    <link rel="javascript" href="./app.js">
+    <script rel="javascript" src="./app.js"></script>
 </head>
 <body>
     <div id="container">
         <h1>Let's play!</h1>
-        <img id="background" src="./assets/blackjack-background.png">
+        <img id="background" src="./assets/blackjack-background.png" alt="title and cards">
         <div>
             <button id="play" onclick="window.location.href='/game.html'">Play</button>
         </div>
