--- a/public/blackjack.html
+++ b/public/blackjack.html
@@ -13,27 +13,26 @@
         <div id="current-bet" style="color: gray; font-size: 25px"></div>
         <div id="dealer-hand">
             <div class="writing">Dealer's Hand</div>
-                <img>
-                <img>
-                <img>
-                <img>
-                <img>
+                <img class="card" id="dealer-1" src="">
+                <img class="card" id="dealer-2" src="">
+                <img class="card" id="dealer-3" src="">
+                <img class="card" id="dealer-4" src="">
+                <img class="card" id="dealer-5" src="">
             </div>
 
         <div id="user-hand" class="writing">
             <div>Your Hand</div>
-                <img>
-                <img>
-                <img>
-                <img>
-                <img>
+                <img class="card" id="user-1" src="">
+                <img class="card" id="user-2" src="">
+                <img class="card" id="user-3" src="">
+                <img class="card" id="user-4" src="">
+                <img class="card" id="user-5" src="">
         </div>
 
         <button type="button" class="button" id="hit">Hit</button>
         <button type="button" class="button" id="stand">Stand</button>
     </div>
 
-    <script type="text/javascript" src="./app.js"></script>
     <script type="text/javascript" src="./blackjack.js"></script>
 </body>
 </html>
