--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,11 @@
     <div id="container">
         <h1>Let's play!</h1>
         <img id="background" src="./assets/blackjack-background.png" alt="title and cards">
+        <div id="winnings" style="color: gray; font-size: 25px; margin: 5px;">Winnings: $0</div>
         <div>
             <button id="play" onclick="window.location.href='/game.html'">Play</button>
         </div>
     </div>
+    <script type="text/javascript" src="/index.js"></script>
 </body>
 </html>
