Working on stand button

--- a/public/blackjack.html
+++ b/public/blackjack.html
@@ -10,7 +10,7 @@
 <body>
     <div id="blackjack-container">
         <div style="color: white; font-size: 50px; margin: 25px;">Let's play!</div>
-        <div id="winnings" style="color: gray; font-size: 25px; margin: 5px;">Winnings: $0</div>
+        <div id="winnings" >Winnings: $0</div>
         <div id="current-bet" style="color: gray; font-size: 25px"></div>
         <div id="dealer-hand">
             <div class="writing" id="dealer-hand">Dealer's Hand</div>
